# ccd-minting-wizard

./: README.md  rework.py
client/: .dockerignore  .env  .eslint.base.json  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  nx.json  package.json  readme.md  tsconfig.base.json  vercel.json
client/apps/home/: index.html  postcss.config.js  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.spec.json  vite.config.mts
client/apps/storybook/: .eslintrc.json  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.storybook.json
client/docs/images/: ccd-mint-wizard-frontend-script.drawio
client/libs/home-layers/: .eslintrc.json  README.md  project.json  tsconfig.lib.json
client/types/: global.d.ts
smart-contract/: .gitignore  Cargo.toml  contracts-processor.py  contracts_processor.py  readme.md  requirements.txt  secrets_template.py  upgrade_params.json
smart-contract/examples/: burn.md  init.md  mint.md  transfer.md
smart-contract/processed/000010/: reference.text
smart-contract/processed/000100/: Cargo.toml  reference.text
smart-contract/processed/000100/src/: lib.rs
smart-contract/processed/000100/tests/: tests.rs
smart-contract/processed/000110/: reference.module
smart-contract/processed/001011/: reference.module  reference.text
smart-contract/processed/001100/: reference.module
smart-contract/processed/001111/: reference.module
smart-contract/src/: lib.rs
smart-contract/src/processed/000101/: Cargo.toml
smart-contract/src/processed/000101/src/: lib.rs
(+889 files in other folders)
