[package]
name = "mint-wizard"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "bump_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-cis2 = {version = "6.1.0", default-features = false}
concordium-std = {version = "10.1.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[dev-dependencies]
concordium-smart-contract-testing = {version = "4.2.0", default-features = false}
concordium-std-derive = {version = "6.0.0", default-features = false}
rand = "0.8"

[profile.release]
opt-level = "s"
codegen-units = 1
